--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/184/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/184/index.mdx
@@ -134,24 +134,24 @@ With this data, you can stop guessing which components to keep, remove, or impro
 
 ## 📱 React-Native {#react-native}
 
-This section is authored by [Benedikt](https://twitter.com/bndkt).
+Cette section est rédigée par [Benedikt](https://twitter.com/bndkt).
 
 [![Expo SDK 51](/emails/issues/184/expo51.jpg)](https://expo.dev/changelog/2024/05-07-sdk-51)
 
 [**Expo SDK 51**](https://expo.dev/changelog/2024/05-07-sdk-51)
 
-Hot on the heels of React Native 0.74 follows the release of Expo SDK 51. This release mostly advances the internal architecture and promotes some previously experimental packages to the new default, so let me quickly get out of the way the topics we have already covered in this newsletter: New Architecture support for most Expo modules (there are still some [known issues](https://docs.expo.dev/guides/new-architecture/#known-issues-in-expo-sdk-libraries)), Bridgeless support, support for Apple’s privacy manifest, “next” versions of camera and sqlite package are now the default, Fingerprint no longer experimental. But there is also a new expo-symbols package featuring Apple’s SF Symbols library (iOS only), a new expo-video library, Expo Router 3.5 release with support for the # segment in URLs, and improvements to EAS Update (e.g. a web UI to roll out updates gradually). I expect bigger announcements around Expo Router (RSC 👀) at the upcoming React Conf, so stay tuned! One other significant change is that Expo Go, starting with version 51, only supports one single version of the Expo SDK. This decision makes absolute sense to me as it makes maintenance of the Expo Go app a lot easier and for most use cases, you should be using Expo Dev Client anyways.
+La sortie de React Native 0.74 est suivie de celle d'Expo SDK 51. Cette version fait principalement progresser l'architecture interne et fait passer certains packages expérimentaux dans la nouvelle configuration par défaut, alors permettez-moi d'aborder rapidement les sujets que nous avons déjà couverts dans cette newsletter : Prise en charge de la Nouvelle Architecture pour la plupart des modules Expo (il y a encore quelques [problèmes connus](https://docs.expo.dev/guides/new-architecture/#known-issues-in-expo-sdk-libraries)), prise en charge de Bridgeless, prise en charge du manifeste de confidentialité d'Apple, les versions « next » des packages camera et sqlite sont maintenant les versions par défaut, Fingerprint n'est plus expérimental. Mais il y a aussi un nouveau package expo-symbols qui contient la bibliothèque SF Symbols d'Apple (iOS seulement), une nouvelle bibliothèque expo-video, la version 3.5 d'Expo Router avec le support du fragment # dans les URL, et des améliorations pour EAS Update (par exemple une interface web pour déployer les mises à jour graduellement). Je m'attends à des annonces plus importantes autour d'Expo Router (RSC 👀) lors de la prochaine React Conf, alors restez à l'écoute ! Un autre changement important est qu'Expo Go, à partir de la version 51, ne prend en charge qu'une seule version du SDK Expo. Cette décision est tout à fait logique pour moi car elle rend la maintenance de l'application Expo Go beaucoup plus facile et pour la plupart des cas d'utilisation, vous devriez utiliser Expo Dev Client de toute façon.
 
 ---
 
 - 💸 [PowerSync – build local-first apps with simple state management and real-time reactivity. Non-invasive to existing architecture](https://www.powersync.com/?utm_source=newsletter&utm_medium=sponsorship&utm_campaign=this-week-in-react)
 - 🐦 [Rewritten Metro resolver in Expo SDK 51 is up to 6x faster](https://x.com/Baconbrix/status/1785364741751214529)
 - 🐦 [Build native iOS apps over-the-air with Expo 51 beta!](https://x.com/Baconbrix/status/1783621369743245363)
-- 👀 [EAS Build - Pricing update](https://expo.dev/changelog/2024/05-02-fast-failed-builds-exclusion): Fast-failed builds (failing within the first 3 minutes) are now free, this is greatly appreciated!
-- 🗓 [App.js Conf](https://appjs.co/?utm_source=thisweekinreact) - 🇵🇱 Kraków - 22-24 May. Get a [10% discount](https://ti.to/appjs/2024/discount/TWIR) with code "TWIR".
-- 📜 [React Native Local Database Options: A Comprehensive Summary](https://www.powersync.com/blog/react-native-local-database-options): Local-first enables really performant apps, and new solutions to tackle this keep popping up. Here’s an overview of the different db options.
-- 📜 [React Native Vision Camera x Skia: What's New in v4](https://www.premieroctet.com/blog/en/react-native-vision-camera-v4-skia): I predict we will see some crazy new interactive experiences with RN Vision Camera and Skia frame processors!
-- 📜 [iPad Hover effects in React Native 0.74](https://www.oskarkwasniewski.dev/blog/react-native-ipad-hover-effects): iPadOS has a specific way to highlight when the input device (e.g. the Pencil) hovers over a UI element; here’s how to use it in RN).
+- 👀 [EAS Build - Pricing update](https://expo.dev/changelog/2024/05-02-fast-failed-builds-exclusion) : Les constructions à échec rapide (échec dans les 3 premières minutes) sont désormais gratuites, ce qui est très apprécié !
+- 🗓 [App.js Conf](https://appjs.co/?utm_source=thisweekinreact) - 🇵🇱 Kraków - 22-24 mai. Bénéficiez d'une [réduction de 10 %](https://ti.to/appjs/2024/discount/TWIR) avec le code « TWIR ».
+- 📜 [React Native Local Database Options: A Comprehensive Summary](https://www.powersync.com/blog/react-native-local-database-options) : Le local-first permet d'obtenir des applications très performantes, et de nouvelles solutions apparaissent sans cesse. Voici un aperçu des différentes options de base de données.
+- 📜 [React Native Vision Camera x Skia: What's New in v4](https://www.premieroctet.com/blog/en/react-native-vision-camera-v4-skia) : Je prédis que nous verrons de nouvelles expériences interactives folles avec la caméra RN Vision et les processeurs de frame Skia !
+- 📜 [iPad Hover effects in React Native 0.74](https://www.oskarkwasniewski.dev/blog/react-native-ipad-hover-effects) : iPadOS dispose d'une méthode spécifique pour mettre en évidence le survol d'un élément de l'interface utilisateur par le périphérique de saisie (par exemple, le crayon); voici comment l'utiliser dans RN).
 - 📜 [Rust modules in React Native](https://ospfranco.com/post/2024/05/08/react-native-rust-module-guide/)
 - 📦 [Reanimated 3.9 - Screen Transitions, useScrollViewOffset now works on Web, React Native 0.74 and Bridgeless Mode support, Shared Element Transitions stability improvements](https://github.com/software-mansion/react-native-reanimated/releases/tag/3.9.0)
 - 📦 [React Native 0.74.1 - Privacy manifest aggregation](https://github.com/facebook/react-native/releases/tag/v0.74.1)
