--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/184/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/184/index.mdx
@@ -76,7 +76,7 @@ L'équipe de Tailwind a publié une mise à jour majeure de sa bibliothèque de 
 ---
 
 - 💸 [React Universe Conf - Previously React Native EU. Experts from React & React Native under one roof! Use code RUCxTWIR to get a 10% discount.](https://www.reactuniverseconf.com/tickets-2024?utm_campaign=React_Universe_Conf&utm_source=email&utm_content=This_Week_in_React)
-- 💬 [Why doesn't Next.js expose the request and response objects in Layouts?](https://github.com/vercel/next.js/issues/43704#issuecomment-2090798307) : Delba explique qu'exposer plus d'APIs empêcherait Next.js d'optimiser le code à l'avenir (notamment grâce au Partial Prerendering), et nous donne des alternatives. Cette [solution de contournement](https://www.propelauth.com/post/getting-url-in-next-server-components) m'a fait sourire : placer les données de la requête dans une entête par le biais d'un middleware pour pouvoir y accéder.
+- 💬 [Why doesn't Next.js expose the request and response objects in Layouts?](https://github.com/vercel/next.js/issues/43704#issuecomment-2090798307) : Delba explique qu'exposer plus d'API empêcherait Next.js d'optimiser le code à l'avenir (notamment grâce au Partial Prerendering), et nous donne des alternatives. Cette [solution de contournement](https://www.propelauth.com/post/getting-url-in-next-server-components) m'a fait sourire : placer les données de la requête dans une entête par le biais d'un middleware pour pouvoir y accéder.
 - 💬 [Vite RFC - Environment API](https://github.com/vitejs/vite/discussions/16358) : Cette fonctionnalité à venir de Vite 6 devrait aider à prendre en charge les composants React Server dans Vite. Cela pourrait également faire de Vite un choix viable pour React Native, qui doit gérer un graphique de module par plateforme native.
 - 👀 [React DevTools 5.2 PR](https://github.com/facebook/react/pull/29022) : Les composants optimisés par le compilateur React afficheront un badge « ✨ Memo », y compris dans le profiler. Nous pouvons maintenant déboguer/inspecter useFormStatus. Il y a aussi du travail autour de « Fusebox », un nouveau nom de code pour React Native DevTools.
 - 👀 [Next.js PR - Support React 19 in App and Pages router](https://github.com/vercel/next.js/pull/65058)
