--- a/website/newsletter/186/index.mdx
+++ b/website/newsletter/186/index.mdx
@@ -52,9 +52,9 @@ Ready to take your development to the next level? Make React-admin your go-to fr
 
 **[Next.js auth tutorial with RSCs and Server Actions](https://www.youtube.com/watch?v=aoRG1q_kVo8)**
 
-The latest tutorial with WorkOS and Sam Selikoff shows how you can easily add AuthKit's hosted login box to a Next.js app:  
-  
-📚 Get started using the Authkit <> Next.js [integration library](https://github.com/workos/authkit-nextjs)  
+The latest tutorial with WorkOS and Sam Selikoff shows how you can easily add AuthKit's hosted login box to a Next.js app:
+
+📚 Get started using the Authkit \<> Next.js [integration library](https://github.com/workos/authkit-nextjs)
 🤖 Set up environment variables, configure the callback route and middleware, and implement signIn and signOut functionalities  
 ⚙️ Protect routes in the Next.js app from unauthenticated users with the getUser function
 
@@ -70,7 +70,7 @@ This section is authored by [Benedikt](https://twitter.com/bndkt).
 
 <Todo />
 
-- 💸 [PowerSync - Supabase <> SQLite sync layer: follow our step-by-step video integration guide.](https://docs.powersync.com/integration-guides/supabase-+-powersync?utm_source=newsletter&utm_medium=sponsorship&utm_campaign=this-week-in-react)
+- 💸 [PowerSync - Supabase \<> SQLite sync layer: follow our step-by-step video integration guide.](https://docs.powersync.com/integration-guides/supabase-+-powersync?utm_source=newsletter&utm_medium=sponsorship&utm_campaign=this-week-in-react)
 
 ---
 
