--- a/website/newsletter/186/index.mdx
+++ b/website/newsletter/186/index.mdx
@@ -8,6 +8,8 @@ unlisted: true
 
 Hi everyone!
 
+- 🗓 [Chain React Conf](https://chainreactconf.com/?utm_source=thisweekinreact) -  Portland, OR - July 17-19. The U.S. React Native Conference is back with engaging talks and hands-on workshops! Get 15% off your ticket with code “TWIR”
+
 <Todo />
 
 <!-- truncate -->
